# wgpu_demo

./: Cargo.toml
example/: window.rs
example/buffer/: main.rs  shader.wgsl
example/textures/: main.rs
src/: main.rs
src/example/: swap_chain.rs
src/example/depth/: main.rs  shader_depth.wgsl
src/example/depth2/: main.rs  shader.wgsl  shader_depth.wgsl
src/example/instance/: main.rs  shader.wgsl
src/example/load_jpeg/: main.rs
src/example/pipeline/: pipeline.rs  shader.wgsl  shader2.wgsl
src/example/textures/: shader.wgsl
src/example/uniform/: main.rs
src/utils/: mod.rs
utils/: Cargo.toml
utils/gen_code/: Cargo.toml
utils/gen_code/src/: lib.rs
utils/src/: component.rs  lib.rs  object.rs
utils/src/components/: mod.rs
utils/src/resource_manager/: mod.rs
