[package]
name = "wgpu_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version="0.9" }
env_logger = "0.9.0"
pollster = "0.2.4"
winit = "0.25.0"

[[example]]
name = "window"
path = "example/window.rs"

[[example]]
name = "swap_chain"
path = "example/swap_chain.rs"