[package]
name = "wgpu_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version="0.9" }
env_logger = "0.9.0"
pollster = "0.2.4"
winit = "0.25.0"
bytemuck = { version = "1.7.2", features = [ "derive" ] }
image = "0.23.14"
cgmath = "0.18.0"

[[example]]
name = "window"
path = "src/example/window.rs"

[[example]]
name = "swap_chain"
path = "src/example/swap_chain.rs"

[[example]]
name = "pipeline"
path = "src/example/pipeline/pipeline.rs"

[[example]]
name = "buffer"
path = "src/example/buffer/main.rs"

[[example]]
name = "textures"
path = "src/example/textures/main.rs"

[[example]]
name = "load_jpeg"
path = "src/example/load_jpeg/main.rs"

[[example]]
name = "uniform"
path = "src/example/uniform/main.rs"

[[example]]
name = "instance"
path = "src/example/instance/main.rs"

[[example]]
name = "depth"
path = "src/example/depth/main.rs"

[[example]]
name = "depth2"
path = "src/example/depth2/main.rs"